# sat_v1

./: .gitignore  .syncignore  CONTEXT.md  README.md  app.yml  main.py  pyproject.toml  run.sh
backend/: README.md
backend/models/: api_response.py  jobs.py  sat.py
backend/routes/: __init__.py  catalogs.py  checks.py  jobs.py  settings.py  setup.py  state.py
backend/sat/notebooks/: security_analysis_initializer.py
backend/services/: config_service.py  databricks_client.py  databricks_sql.py  jobs_service.py  legacy_secrets_service.py
frontend/: astro.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/checks/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AppShell.tsx  ComputeSelector.module.css  ComputeSelector.tsx  Dashboard.module.css  Dashboard.tsx  Header.tsx  Navigation.module.css  Navigation.tsx  SecurityChecks.module.css  SecurityChecks.tsx  Settings.module.css  Settings.tsx  SetupForm.module.css  SetupForm.tsx  TopBar.module.css  TopBar.tsx  icons.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: checks.astro  dashboard.astro  index.astro  settings.astro
frontend/src/utils/: api.ts
